--- a/static/templates/head_taskbar.html
+++ b/static/templates/head_taskbar.html
@@ -1,6 +1,3 @@
-<link type="text/css" href="{{root}}/skin/jquery-ui/jquery-ui.min.css" rel="Stylesheet" />
-<link type="text/css" href="{{root}}/skin/jquery-ui/jquery-ui.theme.min.css" rel="Stylesheet" />
 <link type="text/css" href="{{root}}/skin/taskbar.css" rel="Stylesheet" />
-<script type="text/javascript" src="{{root}}/skin/jquery-ui/external/jquery/jquery.js" defer></script>
-<script type="text/javascript" src="{{root}}/skin/jquery-ui/jquery-ui.min.js" defer></script>
+<script type="text/javascript" src="{{root}}/skin/autoComplete.min.js"></script>
 <script type="text/javascript" src="{{root}}/skin/taskbar.js" defer></script>
