--- a/static/templates/head_taskbar.html
+++ b/static/templates/head_taskbar.html
@@ -1,3 +1,4 @@
 <link type="text/css" href="{{root}}/skin/taskbar.css" rel="Stylesheet" />
+<link type="text/css" href="{{root}}/skin/css/autoComplete.01.css" rel="Stylesheet" />
 <script type="text/javascript" src="{{root}}/skin/autoComplete.min.js"></script>
 <script type="text/javascript" src="{{root}}/skin/taskbar.js" defer></script>
