--- a/static/templates/404.html
+++ b/static/templates/404.html
@@ -2,10 +2,10 @@
 <html>
   <head>
     <meta content="text/html;charset=UTF-8" http-equiv="content-type" />
-    <title>Content not found</title>
+    <title>{{PAGE_TITLE}}</title>
   </head>
   <body>
-    <h1>Not Found</h1>
+    <h1>{{PAGE_HEADING}}</h1>
 {{#details}}
     <p>
       {{{p}}}
