Testing of "Fulltext search unavailable" page

--- a/static/templates/no_search_result.html
+++ b/static/templates/no_search_result.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
   <head>
-    <meta content="text/html; charset=utf-8" http-equiv="content-type" />
+    <meta content="text/html;charset=UTF-8" http-equiv="content-type" />
     <title>Fulltext search unavailable</title>
     <link type="text/css" href="{{root}}/skin/search_results.css" rel="Stylesheet" />
   </head>
-  <body bgcolor="white">
+  <body>
     <div class="header">Not found</div>
     <p>
       There is no article with the title <b> "{{pattern}}"</b>
