Pushing no_search_results.html towards error.html

--- a/static/templates/no_search_result.html
+++ b/static/templates/no_search_result.html
@@ -6,7 +6,7 @@
     <link type="text/css" href="{{root}}/skin/search_results.css" rel="Stylesheet" />
   </head>
   <body>
-    <div class="header">Not found</div>
+    <h1>Not found</h1>
     <p>
       There is no article with the title <b> "{{pattern}}"</b>
       and the fulltext search engine is not available for this content.
