Unwrapped an error message.

--- a/static/templates/no_search_result.html
+++ b/static/templates/no_search_result.html
@@ -8,8 +8,7 @@
   <body>
     <h1>Not found</h1>
     <p>
-      There is no article with the title <b> "{{pattern}}"</b>
-      and the fulltext search engine is not available for this content.
+      There is no article with the title <b>"{{pattern}}"</b> and the fulltext search engine is not available for this content.
     </p>
   </body>
 </html>
