Added an optional CSS link to error.html

--- a/static/templates/error.html
+++ b/static/templates/error.html
@@ -3,6 +3,9 @@
   <head>
     <meta content="text/html;charset=UTF-8" http-equiv="content-type" />
     <title>{{PAGE_TITLE}}</title>
+{{#CSS_URL}}
+    <link type="text/css" href="{{{CSS_URL}}}" rel="Stylesheet" />
+{{/CSS_URL}}
   </head>
   <body>
     <h1>{{PAGE_HEADING}}</h1>
