--- a/static/templates/taskbar_part.html
+++ b/static/templates/taskbar_part.html
@@ -12,7 +12,7 @@
         <label for="kiwix_button_show_toggle"><img src="{{root}}/skin/caret.png" alt=""></label>
         <div class="kiwix_button_cont">
           {{#withlibrarybutton}}
-            <a id="kiwix_serve_taskbar_library_button" title="Go to welcome page" aria-label="Go to welcome page" href="{{root}}/"><button>&#x1f3e0;</button></a>
+            <a id="kiwix_serve_taskbar_library_button" title="{{{LIBRARY_BUTTON_TEXT}}}" aria-label="{{{LIBRARY_BUTTON_TEXT}}}" href="{{root}}/"><button>&#x1f3e0;</button></a>
           {{/withlibrarybutton}}
           {{#hascontent}}
           <a id="kiwix_serve_taskbar_home_button" title="Go to the main page of '{{title}}'" aria-label="Go to the main page of '{{title}}'" href="{{root}}/{{content}}/"><button>{{title}}</button></a>
