--- a/static/templates/index.html
+++ b/static/templates/index.html
@@ -39,7 +39,7 @@
       }
     </style>
     <script src="{{root}}/skin/isotope.pkgd.min.js" defer></script>
-    <script src="{{root}}/skin/iso6391To3.js"></script>
+    <script src="{{root}}/skin/iso639_maps.js"></script>
     <script type="text/javascript" src="{{root}}/skin/index.js" defer></script>
   </head>
   <body>
