add link to duck duck go results, to support offline first search

--- a/static/templates/search_result.html
+++ b/static/templates/search_result.html
@@ -95,6 +95,10 @@
   </head>
   <body bgcolor="white">
     <div class="header">
+      <p>
+      <a href="https://lite.duckduckgo.com/lite/?q={{searchPatternEncoded}}">on DDG</a>
+      <p>
+      <br/>
       {{#hasResults}}
         Results
         <b>
